--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -235,16 +235,11 @@ information about the package.
 
 With __roxygen__ documentation enabled, we need to generate the documentation
 for `lm_stan` and update the `NAMESPACE` so the function is exported, i.e.,
-available to users when the package is installed.  This can be done with the
-function `roxygen2::roxygenize()`, which needs to be called twice initially.
+available to users when the package is installed. This can be done with the
+function `devtools::document()`.
 
-```{r, eval = FALSE}
-try(roxygen2::roxygenize(load_code = rstantools_load_code), silent = TRUE)
-roxygen2::roxygenize()
-```
-```{r, echo=FALSE, results="hide"}
-try(roxygen2::roxygenize(PATH, load_code = rstantools_load_code), silent = TRUE)
-roxygen2::roxygenize(PATH)
+```{r}
+devtools::document(PATH)
 ```
 
 ## Install and use
