--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -8,7 +8,7 @@ output:
 params:
   EVAL: !r identical(Sys.getenv("NOT_CRAN"), "true")
 vignette: >
-  %\VignetteIndexEntry{Step by step guide}
+  %\VignetteIndexEntry{Step by step guide for creating a package that depends on RStan}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
