Don't use devtools::document()

--- a/vignettes/minimal-rstan-package.Rmd
+++ b/vignettes/minimal-rstan-package.Rmd
@@ -238,8 +238,14 @@ for `lm_stan` and update the `NAMESPACE` so the function is exported, i.e.,
 available to users when the package is installed. This can be done with the
 function `devtools::document()`.
 
-```{r}
-devtools::document(PATH)
+```{r, eval = FALSE}
+try(roxygen2::roxygenize(load_code = rstantools_load_code), silent = TRUE)
+roxygen2::roxygenize()
+```
+
+```{r, echo=FALSE, results="hide"}
+try(roxygen2::roxygenize(PATH, load_code = rstantools_load_code), silent = TRUE)
+roxygen2::roxygenize(PATH)
 ```
 
 ## Install and use
